Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
Description
innodb_flush_neighbors was an optimization for rotating disk, to have larger IO size. It costs CPU, and it does not bring anything for the SSD. I think OFF is now a good default (and also it has good in the past couple of years)
See for example
https://stackoverflow.com/questions/40732595/is-there-any-configuration-option-for-innodb-that-increase-the-performance-for-s
Attachments
Issue Links
- causes
-
MDEV-23526 InnoDB leaks memory for some static objects
-
- Closed
-
- relates to
-
MDEV-14533 Provide information_schema tables using which hardware information can be obtained.
-
- Closed
-
-
MDEV-15528 Avoid writing freed InnoDB pages
-
- Closed
-
-
MDEV-22343 Remove SYS_TABLESPACES and SYS_DATAFILES
-
- Closed
-
-
MDEV-23929 innodb_flush_neighbors is not being ignored for system tablespace on SSD
-
- Closed
-
-
MDEV-15528 Avoid writing freed InnoDB pages
-
- Closed
-
-
MDEV-20400 Implement a way to query an InnoDB table's max row size
-
- Confirmed
-